--- a/工作.md
+++ b/工作.md
@@ -43,3 +43,25 @@ system() -> popen(command.c_str(), "r");
 zaijian123@aliyun.com
 dd19861026
 ```
+
+差异包
+```
+1.每打一个包，生成一个TAG，用于对比。（原始包）
+2.更res中的配置文件channel_cfg.json，升级版本号。
+3.更新patch_cfg.json文件中要对比的版本（最近的一个版本)
+4.执行命令 ./compile_src.py，编译生成加密文件
+5.执行命令 patch_tool.py，生成差异包. 检查差异包文件名是否正确。
+6.删除generated_x.x.x  文件夹中的 Vx.x.x_Vx.x.x
+7.将generated_x.x.x添加到SVN 上传SVN服务器。
+8.登陆ssl服务器   命令 ssh -p 2050 lixiong@sshs1.gqp01.com
+9.登陆密码 lx20170619
+10.进入自己的目录 cd ~
+11.svn co https://lixiong@39.108.152.6/svn/qzmj/trunk/lua-client/hot-update-res/
+10.svn update 
+11.进入generated_x.x.x目录
+12.执行copy命令 cp version_2.0.3_manifest.json /data/app/qzmj/html_vhost/html/gqp01.com/lua/qzmj/ 
+13.执行copy命令 cp patch_V2.0.2_V2.0.3.zip /data/app/qzmj/html_vhost/html/gqp01.com/lua/qzmj/ 
+14.进入/data/app/qzmj/html_vhost/html/gqp01.com/lua/qzmj/ 
+15.执行 ls 命令 查看文件是否copy成功
+```
+
