--- a/工作.md
+++ b/工作.md
@@ -40,9 +40,19 @@ system() -> popen(command.c_str(), "r");
 
 闽南麻将bundleid
 ```
+www.wan.aamj.com
+
 zaijian123@aliyun.com
 dd19861026
 ```
+
+闽南麻将企业包BundleID
+```
+com.hh.majiang.aa
+
+
+```
+
 
 差异包
 ```
@@ -64,4 +74,14 @@ dd19861026
 14.进入/data/app/qzmj/html_vhost/html/gqp01.com/lua/qzmj/ 
 15.执行 ls 命令 查看文件是否copy成功
 ```
+```
+闽南   ios                  项目ID    1   
+ios 企业包      项目ID    3
+android          项目ID    2
+android百度   项目ID    4
 
+福州 
+ios                  项目ID    5   
+ios 企业包      项目ID    3
+android          项目ID    2
+```
