--- a/工作.md
+++ b/工作.md
@@ -43,7 +43,7 @@ system() -> popen(command.c_str(), "r");
 www.wan.aamj.com
 
 zaijian123@aliyun.com
-dd19861026
+Dd19861026
 ```
 
 闽南麻将企业包BundleID
@@ -51,6 +51,22 @@ dd19861026
 com.hh.majiang.aa
 
 
+```
+企业包链接:
+```
+<string>https://gqp01.com/qz/qzmj_ios_2.0.0.ipa</string>
+                </dict>
+                <dict>
+                    <key>kind</key>
+                    <string>display-image</string>
+                    <key>url</key>
+                    <string>https://gqp01.com/qz/57.png</string>
+                </dict>
+                <dict>
+                    <key>kind</key>
+                    <string>full-size-image</string>
+                    <key>url</key>
+                    <string>https://gqp01.com/qz/512.jpg</string>
 ```
 
 
@@ -67,11 +83,11 @@ com.hh.majiang.aa
 9.登陆密码 lx20170619
 10.进入自己的目录 cd ~
 11.svn co https://lixiong@39.108.152.6/svn/qzmj/trunk/lua-client/hot-update-res/
-10.svn update 
+10.svn update
 11.进入generated_x.x.x目录
-12.执行copy命令 cp version_2.0.3_manifest.json /data/app/qzmj/html_vhost/html/gqp01.com/lua/qzmj/ 
-13.执行copy命令 cp patch_V2.0.2_V2.0.3.zip /data/app/qzmj/html_vhost/html/gqp01.com/lua/qzmj/ 
-14.进入/data/app/qzmj/html_vhost/html/gqp01.com/lua/qzmj/ 
+12.执行copy命令 cp version_2.0.3_manifest.json /data/app/qzmj/html_vhost/html/gqp01.com/lua/qzmj/
+13.执行copy命令 cp patch_V2.0.2_V2.0.3.zip /data/app/qzmj/html_vhost/html/gqp01.com/lua/qzmj/
+14.进入/data/app/qzmj/html_vhost/html/gqp01.com/lua/qzmj/
 15.执行 ls 命令 查看文件是否copy成功
 ```
 ```
@@ -80,8 +96,33 @@ ios 企业包      项目ID    3
 android          项目ID    2
 android百度   项目ID    4
 
-福州 
+福州
 ios                  项目ID    5   
 ios 企业包      项目ID    3
 android          项目ID    2
+```
+
+宁德麻将
+```
+http://ndweb.wwg01.com/vinit/vinit
+ndapp.wwg01.com 2050 lixiong lx20170619 /data/app/ndmj/nginx_html/lua
+```
+
+
+```宁德麻将开发者账号
+wangning82118@163.com
+WANGning1109
+```
+
+```宁德沙箱测试账户
+571241724@qq.com
+Ndmj@12345
+```
+
+```shell
+/usr/share/nginx/html/lua/fzmj
+```
+
+```shell
+scp -P 22 qzmj_android_r2.3.3_IP137内网包_2_alpha.apk xuxm@192.168.2.137:/home/xuxm/publish/static/file/
 ```
