--- a/工作.md
+++ b/工作.md
@@ -123,6 +123,29 @@ Ndmj@12345
 /usr/share/nginx/html/lua/fzmj
 ```
 
+南平lua热更路径
+```shell
+ssh 与宁德一样
+/data/app/npmj/nginx_html/lua
+```
+
+龙岩账号
+```
+wangning82118@126.com
+wangNING1109
+```
+
 ```shell
 scp -P 22 qzmj_android_r2.3.3_IP137内网包_2_alpha.apk xuxm@192.168.2.137:/home/xuxm/publish/static/file/
+```
+
+```莆仙麻将开发者账号
+wwpxmj@foxmail.com
+Wwpxmj1024
+```
+
+```ssh
+ssh -p 2050 liuwj@ptapp.wwg01.com
+lwj20170313
+/data/app/ptmj/nginx_html/lua
 ```
