--- a/工作小记.md
+++ b/工作小记.md
@@ -166,3 +166,14 @@ D/OkHttp: <-- 200 OK http://mgame.1332255.com/web/core/login.doLogin.do (1320ms)
 01-13 15:55:23.577 20792-20996/com.hhly.lyygame D/OkHttp: {"result":0,"msg":"成功","user":{"userId":"hhly91599","password":null,"email":null,"phone":"18688968616","headIcon":null,"headIconSmall":null,"nickname":"hhly91599","sex":null,"age":null,"location":null,"lastLoginTime":1484293732000,"lastLoginIp":"116.76.254.8","ip":null,"registerIp":null,"status":2,"loginAccount":"hhly91599","realName":null,"idcarNo":null,"address":null,"qq":null,"emailStatus":0,"phoneStatus":1,"regType":2,"platformId":11,"platformName":null,"createTime":1482379795000,"channel":null,"paypassword":null,"loginType":"0","versionName":null,"osType":1,"versionCode":null,"forbiddenStartTime":null,"forbiddenEndTime":null,"country":0,"forbiddenRemark":null},"token":"cDPRbWCYyLKXv0XlB_SdsKgD7u6-GRpnttY1VBS4w78CkhPfLhjfCbpewd1aXCcJNYnLVrNQwBZxw4IsDu4Wviw8gVhf2izL7Dsljbr02kpr6AxitQIa7TbIXp00M_upoa18q2NmI0N4k4xCe0WRiGH4slql25dosuzPZ7cjTmkJw3RNFsZtP8sz9Q2LM9kd","forbiddenEndTime":null}
 01-13 15:55:23.577 20792-20996/com.hhly.lyygame D/OkHttp: <-- END HTTP (906-byte body)
 ```
+
+MAC 连接到Apple ID服务器时出错
+```
+Wi-Fi选项中将DNS更改为114.114.114.114
+```
+
+修改`xxx.entitlements`文件名
+```
+Build Settings -> Code Signing Entitlements
+```
+https://juejin.im/entry/58f46d685c497d006c9689f3
