--- a/工作.md
+++ b/工作.md
@@ -127,6 +127,12 @@ Ndmj@12345
 ```shell
 ssh 与宁德一样
 /data/app/npmj/nginx_html/lua
+
+企业号：
+netwinzh@gmail.com
+NetWin123$%^
+
+南平企业版 ：www.npmj.wan.com
 ```
 
 龙岩账号
@@ -148,4 +154,5 @@ Wwpxmj1024
 ssh -p 2050 liuwj@ptapp.wwg01.com
 lwj20170313
 /data/app/ptmj/nginx_html/lua
+
 ```
